--- a/.github/workflows/3main.yml
+++ b/.github/workflows/3main.yml
@@ -42,6 +42,7 @@ jobs:
 
     - name: Run Python HTTP Server
       run: |
+        cd C:/Program Files/
         python -m http.server 8080 > NUL 2>&1 &
       shell: bash
 
