--- a/.github/workflows/3main.yml
+++ b/.github/workflows/3main.yml
@@ -40,7 +40,10 @@ jobs:
         Start-Process -FilePath "$env:TEMP\playit.msi" -ArgumentList "/quiet" -Wait
       shell: powershell
 
-    - name: Run Playit.gg Client
+    - name: Run Playit.gg Client and Capture Output
       run: |
-        Start-Process -FilePath "C:\Program Files\playit_gg\bin\playit.exe" -Wait
+        Start-Process -FilePath "C:\Program Files\playit_gg\bin\playit.exe" -NoNewWindow -PassThru -Wait | ForEach-Object {
+          $stdout = $_.StandardOutput.ReadToEnd()
+          Write-Output "Playit.gg Output: $stdout"
+        }
       shell: powershell
