--- a/.github/workflows/maissawqn.yml
+++ b/.github/workflows/maissawqn.yml
@@ -19,4 +19,4 @@ jobs:
         sudo apt update
         sudo apt install ffmpeg -y
         chmod +x s.sh
-        ./s.sh "https://prod-ec-eu-west-3.video.pscp.tv/Transcoding/v1/hls/SvvrtfbXtVcbcdJRLkN0Zw1RPQNmda_ehq-j5xDzcvZ7hmqQyGeSkPoMGwu796reMw33ir9SJX0a42gVgTS3XA/transcode/eu-west-3/periscope-replay-direct-prod-eu-west-3-public/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCIsInZlcnNpb24iOiIyIn0.eyJFbmNvZGVyU2V0dGluZyI6ImVuY29kZXJfc2V0dGluZ183MjBwNjBfMTAiLCJIZWlnaHQiOjcyMCwiSGlnaEZyYW1lUmF0ZSI6dHJ1ZSwiS2JwcyI6NDUwMCwiV2lkdGgiOjEyODB9.stuYmPPT9-xV9TCzbYuSxDgDPioKBbwtYnXdCaqBQNo/dynamic_playlist.m3u8?type=live" "rtmps://live-api-s.facebook.com:443/rtmp/FB-840889634752912-0-AbwL_a6b4LcGjHDv"
+        ./s.sh "https://tv.buz-sport.online/hls/0/stream.m3u8" "rtmps://live-api-s.facebook.com:443/rtmp/870190145156194?s_asc=1&s_bl=1&s_oil=2&s_psm=1&s_pub=1&s_spl=1&s_sw=0&s_tids=1&s_vt=api-s&a=Abyu5imxE-L34jr1"
