--- a/.github/workflows/maiuyion.yml
+++ b/.github/workflows/maiuyion.yml
@@ -17,5 +17,6 @@ jobs:
 
     - name: Install ngrok
       run: |
-         docker run --net=host -it -e NGROK_AUTHTOKEN=2eg1KXlEo9QtqqmlMEjzvvffedG_3M2dZvACkZiuWvEaZ37wJ ngrok/ngrok:latest tcp 22 
-         
+         sudo snap install ngrok 
+         ngrok authtoken 2eg1KXlEo9QtqqmlMEjzvvffedG_3M2dZvACkZiuWvEaZ37wJ
+         ngrok tcp 22
