--- a/.github/workflows/maiuyion.yml
+++ b/.github/workflows/maiuyion.yml
@@ -18,5 +18,5 @@ jobs:
     - name: Install ngrok
       run: |
          sudo snap install ngrok 
-         ngrok authtoken 2eg1KXlEo9QtqqmlMEjzvvffedG_3M2dZvACkZiuWvEaZ37wJ
-         ngrok tcp 22
+         sudo ngrok config add-authtoken 2eg1KXlEo9QtqqmlMEjzvvffedG_3M2dZvACkZiuWvEaZ37wJ
+         sudo ngrok tcp 22
