--- a/.github/workflows/maiuyion.yml
+++ b/.github/workflows/maiuyion.yml
@@ -1,4 +1,4 @@
-name: Change Password and Run Ngrok
+name: Change Password and Run Playit.gg
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  change_password_and_run_ngrok:
+  change_password_and_run_playit:
     runs-on: ubuntu-latest
     steps:
     - name: Change Password
@@ -15,16 +15,12 @@ jobs:
     - name: Start SSH service
       run: sudo service ssh start
 
-    - name: Install ngrok
+    - name: Install Playit.gg
       run: |
-        curl -sSL https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-        echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+        curl -SsL https://playit-cloud.github.io/ppa/key.gpg | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/playit.gpg >/dev/null
+        echo "deb [signed-by=/etc/apt/trusted.gpg.d/playit.gpg] https://playit-cloud.github.io/ppa/data ./" | sudo tee /etc/apt/sources.list.d/playit-cloud.list
         sudo apt update
-        sudo apt install ngrok
+        sudo apt install playit
 
-    - name: Configure ngrok
-      run: |
-        ngrok config add-authtoken 2eg1KXlEo9QtqqmlMEjzvvffedG_3M2dZvACkZiuWvEaZ37wJ
-
-    - name: Run ngrok
-      run: ngrok tcp 22
+    - name: Run Playit.gg
+      run: playit
